# click-aliases

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  test_aliases.py  tox.ini
click_aliases/: __init__.py
examples/: foo.py  foobar.py  naval.py
examples/bar/: subcommand.py
tests/: test_basic.py  test_foobar.py  test_naval.py
