
[tool.poetry]
name = "click-aliases"
version = "1.0.5"
description = "Add (mutiple) aliases to a click group or command"
authors = ["Robbin Bonthond <robbin@bonthond.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.291"
black = { version = ">=23.9.1,<25.0.0", optional = true, python = ">=3.8" }
tox = { version = "^4.11.3", optional = true, python = ">=3.8" }
pluggy = { version = "^1", optional = true, python = ">=3.8" }
isort = { version = "^5.12.0", optional = true, python = ">=3.8" }
build = "^1.0.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
#extend-ignore = E501,F401,F403,F405,W605

[tool.ruff]
select = ["E", "W", "I", "F", "C4", "RET", "SIM", "PLE", "UP"]
target-version = "py311"
line-length = 120
#ignore = ["F401"]
